2018-12-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/main.c:
	  Report lack of hardware multiplication.

2018-12-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/pdk/main.c,
	  src/pdk/ralloc.c:
	  Implement basic support for pointers.

2018-12-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Implement comparison.

2018-12-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/main.c,
	  src/pdk/gen.c:
	  Switch to little-endian to ease pointer-integer casts, fix addition.

2018-12-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Implement shifts, complement, negation.

2018-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Peephole function for z88dk, patch from zsdcc fork diff by Phillip Stevens.
	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/z80/gen.c,
	  src/z80/main.c:
	  More z88dk-specific calling conventions, patch from zsdcc fork diff by Phillip Stevens.

2018-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* configure,
	  configure.ac,
	  sdccconf_in.h,
	  src/SDCCmain.c,
	  src/port.h,
	  src/pdk,
	  src/pdk/Makefile.in,
	  src/pdk/main.c,
	  src/pdk/ralloc.c,
	  src/pdk/ralloc.h:
	  Basic infrastructure for pdk14 backend.

2018-12-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  genAddrOf refactoring.

2018-11-30 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve code generation for negation.

2018-11-30 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Fix an issue in shift of large on-stack operands (part of bug #2844).

2018-11-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Fix an issue in call to function returning struct / union.
