@@ -1,3 +1,9 @@
+2018-12-02 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/ralloc.c,
+	  src/pdk/gen.c:
+	  Allow return of up to 2 bytes.
+
 2018-12-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/pdk/main.c:
